--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Search the Wiki Bro</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +28,7 @@
     </nav>
 
     <section class="container">
-        <div class="input col-xs-6 col-lg-offset-3">
+        <div class="input col-xs-6 col-xs-offset-3">
             <form>
                 <div class="form-group">
                     <label for="wiki-search">Search Wikipedia</label>
