--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="http://en.wikipedia.org/wiki/Special:Random" class="random btn btn-default pull-right">Random Wiki</a>
             </form>
         </div>
-        <div class="main-results col-xs-8 col-lg-offset-2">
+        <div class="main-results col-xs-8 col-xs-offset-2">
             <ul class="results"></ul>
         </div>
     </section><!-- /.container -->
